namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: front-end-ns-test
spec: {}
status: {}
