app-deployment.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: flask_customer_app
spec:
  selector:
    matchLabels:
      app: flask_customer_app
  replicas: 2
  template:
    metadata:
      labels:
        app: flask_customer_app
    spec:
      containers:
      - name: flask-customer-app-9rxcl
        image: narjesna/flask_customer_app
        imagePullPolicy: Never
        ports:
        - containerPort: 5000apiVersion: apps/v1
kind: Deployment
