nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: flask_customer_app
  name: flask_customer_app
spec:
  containers:
  - image: nginx
    name: flask_customer_app
    ports:
      - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
