service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask_customer_app
spec:
  selector:
    app: flask_customer_app
  ports:
  - protocol: "TCP"
    port: 6000
    targetPort: 5000
  type: LoadBalancer
